Assorted tidying moved a bit more code off the worksheet. Implemented tensor for MTX64 matrices.

--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -9,25 +9,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LoadPackage(\"meataxe64\");; Read(\"../gap/bench.g\"); LoadPackage(\"jupyterviz\");;"
+    "LoadPackage(\"meataxe64\");; Read(\"../gap/bench.g\"); \n",
+    "Read(\"../gap/mtx64utils.g\"); LoadPackage(\"jupyterviz\");;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $100\\, 000 \\times 100\\, 000$ matrices over $\\mathbb{F}_2$\n",
+    "## Matrix Multiplication\n",
     "\n",
-    "The main target of the package is large computations."
+    "The Classification of Finite Simple Groups, completed in the 1980s was one of the highlights of 20th Century mathematics. Part of it was the discovery of the 26 unique and reemarkable sporadic simple groups, of which the largest is the Fischer-Griess Monster $\\mathbb{M}$ of order \n",
+    "\n",
+    "$$808017424794512875886459904961710757005754368000000000$$ \n",
+    "\n",
+    "The *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
+    "\n",
+    "For many years this was clearly beyond any practical computation and computational study of this group has to use complex and limited indirect methods. The first actual multiplication of two dense elements was done in 1998, using most of the computing resources of a large maths department for 45 hours.\n",
+    "\n",
+    "Before OpenDreamKit this computation would still have taken days on a powerful workstation. We have contributed to the development of a massively improved C and assembler library and a GAP interface for it.\n",
+    "\n",
+    "It now takes about 8 minutes on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to more convenient $100\\, 000 \\times 100\\, 000$ matrices.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +47,7 @@
        "< matrix 100000x100000 : <MTX64 GF(2)>>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {
       "text/plain": ""
      },
@@ -48,34 +59,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can multiply this by itself:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 63.3s cpu time: 595s memory allocated: 72B no result returned\n"
+      "wall time: 63.9s cpu time: 606s memory allocated: 1.16GB result returned\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "< matrix 100000x100000 : <MTX64 GF(2)>>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "MTX64_WriteMatrix(m,\"a\");;\n",
-    "ShowBench(MTX64_fMultiply, \".\", \"a\", \"a\", \"b\");\n",
-    "p := MTX64_ReadMatrix(\"b\");"
+    "ShowBench(ParMult,m,m);"
    ]
   },
   {
@@ -93,28 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<MTX64 GF(3^2)>"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": [
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 83,
      "metadata": {
       "text/plain": ""
      },
@@ -122,10 +114,10 @@
     }
    ],
    "source": [
-    "f := MTX64_FiniteField(9);\n",
-    "m1 := RandomMat(200,99,GF(9));;\n",
-    "m2 := RandomMat(99,200,GF(9));;\n",
-    "m := MTX64_Matrix(KroneckerProduct(m1,m2));"
+    "f := MTX64_FiniteField(9);;\n",
+    "m1 := MTX64_RandomMat(f, 200,99);;\n",
+    "m2 := MTX64_RandomMat(f, 99,200);;\n",
+    "m := MTX64_KroneckerProduct(m1,m2);"
    ]
   },
   {
@@ -136,21 +128,21 @@
     "\n",
     "$$\\pmatrix{M&0\\cr K & 1} \\rho A \\gamma = \\pmatrix{-1&R\\cr0&0}$$ \n",
     "\n",
-    "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. \n",
+    "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. This is effectively full reduced row echelon form, with transforming matrices.\n",
     "\n",
     "Using this, we can compute inverses, solve systems of equations, determine nullspaces, etc. efficiently."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 11.5s cpu time: 11.2s memory allocated: 747.81MB no result returned\n"
+      "wall time: 11.7s cpu time: 11.1s memory allocated: 747.81MB no result returned\n"
      ]
     },
     {
@@ -159,7 +151,7 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 86,
      "metadata": {
       "text/plain": ""
      },
@@ -171,7 +163,7 @@
        "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 87,
      "metadata": {
       "text/plain": ""
      },
@@ -183,7 +175,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 88,
      "metadata": {
       "text/plain": ""
      },
@@ -193,7 +185,7 @@
    "source": [
     "ech := fail;; # suppress a warning.\n",
     "ShowBench(function() ech := MTX64_Echelize(m);end); \n",
-    "ech. multiplier; ech.cleaner; ech.remnant;  # M, K and R in the above formula"
+    "ech.multiplier; ech.cleaner; ech.remnant;  # M, K and R in the above formula"
    ]
   },
   {
@@ -205,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 24.6s cpu time: 24.4s memory allocated: 186.95MB result returned\n"
+      "wall time: 24.8s cpu time: 24.6s memory allocated: 186.95MB result returned\n"
      ]
     }
    ],
@@ -229,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 4.59s cpu time: 45.8s memory allocated: 144B result returned\n"
+      "wall time: 27.5s cpu time: 204s memory allocated: 144B result returned\n"
      ]
     },
     {
@@ -245,7 +237,7 @@
        "true"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 38,
      "metadata": {
       "text/plain": ""
      },
@@ -273,17 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q := 625;; maxdim := 5000;; \n",
+    "q := 3;; maxdim := 20000;; \n",
     "sizes := List([1..16], i-> i*QuoInt(maxdim, 16));;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
        "( function ( element ) {\n",
-       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [312,624,936,1248,1560,1872,2184,2496,2808,3120,3432,3744,4056,4368,4680,4992],\"y\" : [6,29,68,137,244,383,645,889,1234,1705,2235,2884,3543,4673,5489,6611],\"name\" : \"single-threaded\",\"type\" : \"line\"},{\"x\" : [312,624,936,1248,1560,1872,2184,2496,2808,3120,3432,3744,4056,4368,4680,4992],\"y\" : [8,31,148,260,510,1305,1998,3272,4574,5812,7628,9573,11961,15620,18931,22342],\"name\" : \"multi-threaded CPU\",\"type\" : \"line\"},{\"x\" : [312,624,936,1248,1560,1872,2184,2496,2808,3120,3432,3744,4056,4368,4680,4992],\"y\" : [18,32,34,56,104,158,237,369,482,598,761,953,1199,1553,1834,2283],\"name\" : \"multi-threaded wall time\",\"type\" : \"line\"}],\"layout\" : {\"height\" : 400,\"title\" : \"Meataxe64 runtimes for matrix multiply\",\"xaxis\" : {\"title\" : \"Dimension\"},\"yaxis\" : {\"title\" : \"ms\"}}},\"tool\" : \"plotly\"}\n",
+       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [1250,2500,3750,5000,6250,7500,8750,10000,11250,12500,13750,15000,16250,17500,18750,20000],\"y\" : [8,37,96,179,337,532,853,1217,1733,2323,2968,3933,4894,5985,7260,8745],\"name\" : \"single-threaded\",\"type\" : \"line\"},{\"x\" : [1250,2500,3750,5000,6250,7500,8750,10000,11250,12500,13750,15000,16250,17500,18750,20000],\"y\" : [24,47,111,261,430,646,342,466,682,820,1251,1329,1585,2002,2405,2909],\"name\" : \"multi-threaded wall time\",\"type\" : \"line\"}],\"layout\" : {\"height\" : 400,\"title\" : \"Meataxe64 runtimes for matrix multiply\",\"xaxis\" : {\"title\" : \"Dimension\"},\"yaxis\" : {\"title\" : \"ms\"}}},\"tool\" : \"plotly\"}\n",
        ",function(element,visualization){\n",
        "});\n",
        "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
@@ -321,7 +313,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 79,
      "metadata": {
       "application/javascript": ""
      },
@@ -329,23 +321,14 @@
     }
    ],
    "source": [
-    "fsq := function(m) MTX64_WriteMatrix(m, \"a\"); MTX64_fMultiply(\".\", \"a\", \"a\", \"b\"); end;;\n",
     "marks1 := List(mats, x-> BenchMark(\\*,x,x));;\n",
-    "marksm := List(mats, x-> BenchMark(fsq,x));;\n",
+    "marksm := List(mats, x-> BenchMark(ParMult,x,x));;\n",
     "Plot(\n",
-    "[sizes,List(marks1, x-> x.cpu), rec(name := \"single-threaded\")],\n",
-    "[sizes,List(marksm, x-> x.cpu), rec(name := \"multi-threaded CPU\", \n",
+    "[sizes,List(marks1, x-> x.cpu), rec(name := \"single-threaded\",\n",
     "title := \"Meataxe64 runtimes for matrix multiply\", xaxis := \"Dimension\", yaxis := \"ms\")],\n",
     "[sizes,List(marksm, x-> QuoInt(x.wall,10^6)), rec(name := \"multi-threaded wall time\")]\n",
     ");\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
