--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -21,19 +21,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix Multiplication\n",
+    "## Monster Matrix Multiplication\n",
     "\n",
     "The Classification of Finite Simple Groups, completed in the 1980s was one of the highlights of 20th Century mathematics. Part of it was the discovery of the 26 unique and reemarkable sporadic simple groups, of which the largest is the Fischer-Griess Monster $\\mathbb{M}$ of order \n",
     "\n",
-    "$$808017424794512875886459904961710757005754368000000000$$ \n",
+    "$$808017424794512875886459904961710757005754368000000000,$$ \n",
     "\n",
-    "The *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
+    "a group with many intriguing links to other areas of mathematcis and even to theoretical physics. The *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
     "\n",
     "For many years this was clearly beyond any practical computation and computational study of this group has to use complex and limited indirect methods. The first actual multiplication of two dense elements was done in 1998, using most of the computing resources of a large maths department for 45 hours.\n",
     "\n",
     "Before OpenDreamKit this computation would still have taken days on a powerful workstation. We have contributed to the development of a massively improved C and assembler library and a GAP interface for it.\n",
     "\n",
-    "It now takes about 8 minutes on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to more convenient $100\\, 000 \\times 100\\, 000$ matrices.\n"
+    "A Monster matrix multiplication now takes about 8 minutes on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to more convenient $100\\, 000 \\times 100\\, 000$ matrices.\n"
    ]
   },
   {
@@ -88,16 +88,14 @@
    "source": [
     "## Gaussian Elimination\n",
     "\n",
-    "Our other key primitive operation. To see what it does properly we need a singular matrix. \n",
+    "Our other key primitive operation. \n",
     "\n",
-    "We take the Kronecker (tensor) product of two rectangular matrices. \n",
-    "\n",
-    "If $A$ is $n\\times m$ and $B$ is $m\\times n$ with $m < n$ then $A\\otimes B$ will have rank at most $m^2$."
+    "To see what it does properly we need a singular matrix.  We take the Kronecker (tensor) product of two rectangular matrices. (If $A$ is $n\\times m$ and $B$ is $m\\times n$ with $m < n$ then $A\\otimes B$ will be $nm\\times nm$ of rank at most $m^2$.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +104,7 @@
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 102,
      "metadata": {
       "text/plain": ""
      },
@@ -135,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 11.7s cpu time: 11.1s memory allocated: 747.81MB no result returned\n"
+      "wall time: 11.5s cpu time: 11.1s memory allocated: 747.81MB no result returned\n"
      ]
     },
     {
@@ -151,7 +149,7 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 110,
      "metadata": {
       "text/plain": ""
      },
@@ -163,7 +161,7 @@
        "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 111,
      "metadata": {
       "text/plain": ""
      },
@@ -175,7 +173,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 112,
      "metadata": {
       "text/plain": ""
      },
@@ -192,43 +190,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We an compare this runtime to multiplication. If $m$ was full rank we would expect them to be the same, since $m$ is lower rank, the Gaussian elimination is actually faster."
+    "We can also use the multi-threaded version of the Gaussian elimination (although this problenm is a little small)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 24.8s cpu time: 24.6s memory allocated: 186.95MB result returned\n"
-     ]
-    }
-   ],
-   "source": [
-    "ShowBench(\\*,m,m);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also use the multi-threaded version of the Gaussian elimination"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wall time: 27.5s cpu time: 204s memory allocated: 144B result returned\n"
+      "wall time: 4.98s cpu time: 47.4s memory allocated: 144B result returned\n"
      ]
     },
     {
@@ -237,7 +211,7 @@
        "true"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 113,
      "metadata": {
       "text/plain": ""
      },
@@ -247,6 +221,30 @@
    "source": [
     "MTX64_WriteMatrix(m, \"a\"); \n",
     "ShowBench(MTX64_fEchelize, \".\", \"a\", \"gamma\", \"rho\", \"m\", \"k\", \"r\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We an compare this runtime to multiplication. If $m$ was full rank we would expect them to be the same, since $m$ is lower rank, the Gaussian elimination is actually faster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 25.6s cpu time: 25.4s memory allocated: 186.95MB result returned\n"
+     ]
+    }
+   ],
+   "source": [
+    "ShowBench(\\*,m,m);"
    ]
   },
   {
@@ -265,20 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q := 3;; maxdim := 20000;; \n",
-    "sizes := List([1..16], i-> i*QuoInt(maxdim, 16));;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "q := 5;; maxdim := 15000;; \n",
+    "sizes := List([1..16], i-> i*QuoInt(maxdim, 16));;\n",
     "mats := List(sizes, i-> MTX64_RandomMat(MTX64_FiniteField(q), i, i));;"
    ]
   },
@@ -291,35 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "( function ( element ) {\n",
-       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [1250,2500,3750,5000,6250,7500,8750,10000,11250,12500,13750,15000,16250,17500,18750,20000],\"y\" : [8,37,96,179,337,532,853,1217,1733,2323,2968,3933,4894,5985,7260,8745],\"name\" : \"single-threaded\",\"type\" : \"line\"},{\"x\" : [1250,2500,3750,5000,6250,7500,8750,10000,11250,12500,13750,15000,16250,17500,18750,20000],\"y\" : [24,47,111,261,430,646,342,466,682,820,1251,1329,1585,2002,2405,2909],\"name\" : \"multi-threaded wall time\",\"type\" : \"line\"}],\"layout\" : {\"height\" : 400,\"title\" : \"Meataxe64 runtimes for matrix multiply\",\"xaxis\" : {\"title\" : \"Dimension\"},\"yaxis\" : {\"title\" : \"ms\"}}},\"tool\" : \"plotly\"}\n",
-       ",function(element,visualization){\n",
-       "});\n",
-       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
-       ")){myCallback()}else{var filenameString=JSON.stringify(\"viz-tool-plotly\"\n",
-       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"viz-tool-plotly\"\n",
-       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
-       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"main\"\n",
-       ")){myCallback()}else{var filenameString=JSON.stringify(\"main\"\n",
-       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"main\"\n",
-       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
-       ";\n",
-       "} )( element.get( 0 ) )"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {
-      "application/javascript": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "marks1 := List(mats, x-> BenchMark(\\*,x,x));;\n",
     "marksm := List(mats, x-> BenchMark(ParMult,x,x));;\n",
@@ -329,6 +293,13 @@
     "[sizes,List(marksm, x-> QuoInt(x.wall,10^6)), rec(name := \"multi-threaded wall time\")]\n",
     ");\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
