Add pie chart for the license type

--- a/notebooks/GAP_Packages.ipynb
+++ b/notebooks/GAP_Packages.ipynb
@@ -339,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -349,19 +351,77 @@
       "*** 84 packages have no SPDX license identifier in PackageInfo.g\n",
       "\n",
       "*** Licence types, when SPDX license identifier provided:\n",
-      "1 : BSD-3-Clause\n",
-      "1 : GPL-2.0 OR GPL-3.0\n",
+      "84 : Not specified\n",
       "50 : GPL-2.0-or-later\n",
-      "1 : GPL-3.0\n",
       "6 : GPL-3.0-or-later\n",
-      "1 : MIT\n",
       "1 : none\n",
+      "1 : MIT\n",
+      "1 : GPL-3.0\n",
+      "1 : GPL-2.0 OR GPL-3.0\n",
+      "1 : BSD-3-Clause\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "PackagesByLicenseType();"
+    "licinfo:=PackagesByLicenseType();;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ [ \"Not specified\", 84 ], [ \"GPL-2.0-or-later\", 50 ], [ \"GPL-3.0-or-later\", 6 ], [ \"none\", 1 ], [ \"MIT\", 1 ], [ \"GPL-3.0\", 1 ], [ \"GPL-2.0 OR GPL-3.0\", 1 ], [ \"BSD-3-Clause\", 1 ] ]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "licinfo;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "( function ( element ) {\n",
+       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"values\" : [84,50,6,1,1,1,1,1],\"type\" : \"pie\",\"labels\" : [\"Not specified\",\"GPL-2.0-or-later\",\"GPL-3.0-or-later\",\"none\",\"MIT\",\"GPL-3.0\",\"GPL-2.0 OR GPL-3.0\",\"BSD-3-Clause\"]}],\"layout\" : {\"height\" : 400}},\"tool\" : \"plotly\"}\n",
+       ",function(element,visualization){\n",
+       "});\n",
+       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
+       ")){myCallback()}else{var filenameString=JSON.stringify(\"viz-tool-plotly\"\n",
+       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"viz-tool-plotly\"\n",
+       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
+       "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"main\"\n",
+       ")){myCallback()}else{var filenameString=JSON.stringify(\"main\"\n",
+       ");var GAPcode=\"JUPVIZFileContents( LoadJavaScriptFile( \"+filenameString+\" ) );\";window.runGAP(GAPcode,function(result,error){if(error)throw Error(\"When loading library \"+filenameString+\": \"+error);result=result[\"text/plain\"];window.librariesLoadedFromGAP[\"main\"\n",
+       "]=result;try{var whatItEvaluatesTo=eval(result)}catch(e){throw Error(\"Error evaluating code for library \"+filenameString+\": \"+e)}return myCallback()})}\n",
+       ";\n",
+       "} )( element.get( 0 ) )"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {
+      "application/javascript": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Plot(licinfo, rec(type:=\"pie\"));"
    ]
   },
   {
@@ -373,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +778,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {
       "application/javascript": ""
      },
@@ -738,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -790,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +872,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {
       "application/javascript": ""
      },
