--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can multiply this by itself:"
+    "We can multiply this by itself in about 1 minute:"
    ]
   },
   {
@@ -86,16 +86,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is not just for the Monster. Computations with large matrices over finite fields comes up in group theory, representation theory, combinatorics, .... As well as multiplication we need\n",
+    "\n",
     "## Gaussian Elimination\n",
     "\n",
-    "Our other key primitive operation. \n",
+    "Our other key primitive operation. Much more difficult to parallelize in general.\n",
     "\n",
+    "Our basic Gaussian elimnination operation applied to a matrix $A$, computes $M$, $K$, $R$, $\\gamma$ and $\\rho$ satisfying: \n",
+    "\n",
+    "$$\\pmatrix{M&0\\cr K & 1} \\rho A \\gamma = \\pmatrix{-1&R\\cr0&0}$$ \n",
+    "\n",
+    "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. This is effectively full reduced row echelon form, with transforming matrices.\n",
+    "\n",
+    "Using this, we can compute inverses, solve systems of equations, determine nullspaces, etc. efficiently.\n",
     "To see what it does properly we need a singular matrix.  We take the Kronecker (tensor) product of two rectangular matrices. (If $A$ is $n\\times m$ and $B$ is $m\\times n$ with $m < n$ then $A\\otimes B$ will be $nm\\times nm$ of rank at most $m^2$.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +113,7 @@
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 28,
      "metadata": {
       "text/plain": ""
      },
@@ -119,28 +128,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our basic Gaussian elimnination operation applied to a matrix $A$, computes $M$, $K$, $R$, $\\gamma$ and $\\rho$ satisfying: \n",
-    "\n",
-    "$$\\pmatrix{M&0\\cr K & 1} \\rho A \\gamma = \\pmatrix{-1&R\\cr0&0}$$ \n",
-    "\n",
-    "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. This is effectively full reduced row echelon form, with transforming matrices.\n",
-    "\n",
-    "Using this, we can compute inverses, solve systems of equations, determine nullspaces, etc. efficiently."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 11.5s cpu time: 11.1s memory allocated: 747.81MB no result returned\n"
+      "wall time: 11.8s cpu time: 11.2s memory allocated: 747.81MB no result returned\n"
      ]
     },
     {
@@ -149,7 +145,7 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 31,
      "metadata": {
       "text/plain": ""
      },
@@ -161,7 +157,7 @@
        "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 32,
      "metadata": {
       "text/plain": ""
      },
@@ -173,7 +169,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 33,
      "metadata": {
       "text/plain": ""
      },
@@ -195,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 4.98s cpu time: 47.4s memory allocated: 144B result returned\n"
+      "wall time: 4.37s cpu time: 44.1s memory allocated: 144B result returned\n"
      ]
     },
     {
@@ -211,7 +207,7 @@
        "true"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {
       "text/plain": ""
      },
@@ -227,31 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We an compare this runtime to multiplication. If $m$ was full rank we would expect them to be the same, since $m$ is lower rank, the Gaussian elimination is actually faster."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wall time: 25.6s cpu time: 25.4s memory allocated: 186.95MB result returned\n"
-     ]
-    }
-   ],
-   "source": [
-    "ShowBench(\\*,m,m);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run-time versus matrix size"
+    "## Run-time of Multiplication versus matrix size"
    ]
   },
   {
@@ -263,13 +235,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ < matrix 1200x1200 : <MTX64 GF(5)>>, < matrix 2400x2400 : <MTX64 GF(5)>>, < matrix 3600x3600 : <MTX64 GF(5)>>, < matrix 4800x4800 : <MTX64 GF(5)>>, < matrix 6000x6000 : <MTX64 GF(5)>>, < matrix 7200x7200 : <MTX64 GF(5)>>, < matrix 8400x8400 : <MTX64 GF(5)>>, < matrix 9600x9600 : <MTX64 GF(5)>>, < matrix 10800x10800 : <MTX64 GF(5)>>, < matrix 12000x12000 : <MTX64 GF(5)>> ]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "q := 5;; maxdim := 15000;; \n",
-    "sizes := List([1..16], i-> i*QuoInt(maxdim, 16));;\n",
-    "mats := List(sizes, i-> MTX64_RandomMat(MTX64_FiniteField(q), i, i));;"
+    "q := 5;; maxdim := 12000;; steps := 10;;\n",
+    "sizes := List([1..steps], i-> i*QuoInt(maxdim, steps));;\n",
+    "mats := List(sizes, i-> MTX64_RandomMat(MTX64_FiniteField(q), i, i));"
    ]
   },
   {
@@ -281,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
        "( function ( element ) {\n",
-       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [937,1874,2811,3748,4685,5622,6559,7496,8433,9370,10307,11244,12181,13118,14055,14992],\"y\" : [9,59,151,365,676,1133,1800,2669,3728,5121,6739,7625,11468,14378,17300,21917],\"name\" : \"single-threaded\",\"type\" : \"line\"},{\"x\" : [937,1874,2811,3748,4685,5622,6559,7496,8433,9370,10307,11244,12181,13118,14055,14992],\"y\" : [18,24,64,121,240,402,617,838,1183,1621,2087,2621,3224,4019,5079,6832],\"name\" : \"multi-threaded wall time\",\"type\" : \"line\"}],\"layout\" : {\"height\" : 400,\"title\" : \"Meataxe64 runtimes for matrix multiply\",\"xaxis\" : {\"title\" : \"Dimension\"},\"yaxis\" : {\"title\" : \"ms\"}}},\"tool\" : \"plotly\"}\n",
+       "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"x\" : [1200,2400,3600,4800,6000,7200,8400,9600,10800,12000],\"y\" : [19,106,293,677,1211,2157,3434,4766,6676,8715],\"name\" : \"single-threaded\",\"type\" : \"line\"},{\"x\" : [1200,2400,3600,4800,6000,7200,8400,9600,10800,12000],\"y\" : [16,34,89,297,356,609,974,1527,1896,2789],\"name\" : \"multi-threaded wall time\",\"type\" : \"line\"}],\"layout\" : {\"height\" : 400,\"title\" : \"Meataxe64 runtimes for matrix multiply\",\"xaxis\" : {\"title\" : \"Dimension\"},\"yaxis\" : {\"title\" : \"ms\"}}},\"tool\" : \"plotly\"}\n",
        ",function(element,visualization){\n",
        "});\n",
        "}if(window.librariesLoadedFromGAP.hasOwnProperty(\"viz-tool-plotly\"\n",
@@ -303,7 +288,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 21,
      "metadata": {
       "application/javascript": ""
      },
