--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -24,30 +24,43 @@
     "## Monster Matrix Multiplication\n",
     "\n",
     "The Classification of Finite Simple Groups, completed in the 1980s was one of the highlights of 20th Century mathematics. Part of it was the discovery of the 26 unique and reemarkable sporadic simple groups, of which the largest is the Fischer-Griess Monster $\\mathbb{M}$ of order \n",
+    "$808017424794512875886459904961710757005754368000000000$.\n",
     "\n",
-    "$$808017424794512875886459904961710757005754368000000000,$$ \n",
+    "$\\mathbb{M}$ has many intriguing links to other areas of mathematics and even to theoretical physics, so we'd like to compute in it. \n",
     "\n",
-    "a group with many intriguing links to other areas of mathematcis and even to theoretical physics. The *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
+    "**But**, the *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
     "\n",
     "For many years this was clearly beyond any practical computation and computational study of this group has to use complex and limited indirect methods. The first actual multiplication of two dense elements was done in 1998, using most of the computing resources of a large maths department for 45 hours.\n",
     "\n",
     "Before OpenDreamKit this computation would still have taken days on a powerful workstation. We have contributed to the development of a massively improved C and assembler library and a GAP interface for it.\n",
     "\n",
-    "A Monster matrix multiplication now takes about 8 minutes on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to more convenient $100\\, 000 \\times 100\\, 000$ matrices.\n"
+    "A Monster matrix multiplication now takes about 8 minutes on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to half the size. The full-sized multiplcation will take at most 8 times as long."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "< matrix 100000x100000 : <MTX64 GF(2)>>"
+       "98441"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "< matrix 98441x98441 : <MTX64 GF(2)>>"
+      ]
+     },
+     "execution_count": 37,
      "metadata": {
       "text/plain": ""
      },
@@ -55,7 +68,8 @@
     }
    ],
    "source": [
-    "m := MTX64_RandomMat(MTX64_FiniteField(2),100000,100000);"
+    "size := 196882/2;\n",
+    "m := MTX64_RandomMat(MTX64_FiniteField(2),size,size);"
    ]
   },
   {
@@ -67,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 63.9s cpu time: 606s memory allocated: 1.16GB result returned\n"
+      "wall time: 57.0s cpu time: 517s memory allocated: 1.12GB result returned\n"
      ]
     }
    ],
@@ -86,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is not just for the Monster. Computations with large matrices over finite fields comes up in group theory, representation theory, combinatorics, .... As well as multiplication we need\n",
+    "This is not just for the Monster. High performance linear algebra over these small fields are an essential component of a VRE for users in many areas. As well as multiplication we need\n",
     "\n",
     "## Gaussian Elimination\n",
     "\n",
@@ -99,12 +113,15 @@
     "where $\\gamma$ and $\\rho$ are permutations that effectively select the pivot columns and pivot rows of $A$. This is effectively full reduced row echelon form, with transforming matrices.\n",
     "\n",
     "Using this, we can compute inverses, solve systems of equations, determine nullspaces, etc. efficiently.\n",
-    "To see what it does properly we need a singular matrix.  We take the Kronecker (tensor) product of two rectangular matrices. (If $A$ is $n\\times m$ and $B$ is $m\\times n$ with $m < n$ then $A\\otimes B$ will be $nm\\times nm$ of rank at most $m^2$.)"
+    "\n",
+    "To see what it does properly we need a singular matrix.  We take the Kronecker (tensor) product of two rectangular matrices. (If $A$ is $n\\times m$ and $B$ is $m\\times n$ with $m < n$ then $A\\otimes B$ will be $nm\\times nm$ of rank at most $m^2$.)\n",
+    "\n",
+    "We'll try a different small finite field."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +130,7 @@
        "< matrix 19800x19800 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {
       "text/plain": ""
      },
@@ -129,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 11.8s cpu time: 11.2s memory allocated: 747.81MB no result returned\n"
+      "wall time: 11.8s cpu time: 11.0s memory allocated: 747.81MB no result returned\n"
      ]
     },
     {
@@ -145,7 +162,7 @@
        "< matrix 9801x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {
       "text/plain": ""
      },
@@ -157,7 +174,7 @@
        "< matrix 9999x9801 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {
       "text/plain": ""
      },
@@ -169,7 +186,7 @@
        "< matrix 9801x9999 : <MTX64 GF(3^2)>>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {
       "text/plain": ""
      },
