--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -23,18 +23,18 @@
    "source": [
     "## Monster Matrix Multiplication\n",
     "\n",
-    "The Classification of Finite Simple Groups, completed in the 1980s was one of the highlights of 20th Century mathematics. Part of it was the discovery of the 26 unique and reemarkable sporadic simple groups, of which the largest is the Fischer-Griess Monster $\\mathbb{M}$ of order \n",
+    "The Classification of Finite Simple Groups, completed in the 1980s was one of the highlights of 20th Century mathematics. Part of it was the discovery of the 26 unique and remarkable sporadic simple groups, of which the largest is the Fischer-Griess Monster $\\mathbb{M}$ of order \n",
     "$808017424794512875886459904961710757005754368000000000$.\n",
     "\n",
     "$\\mathbb{M}$ has many intriguing links to other areas of mathematics and even to theoretical physics, so we'd like to compute in it. \n",
     "\n",
     "**But**, the *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
     "\n",
-    "For many years this was clearly beyond any practical computation and computational study of this group has to use complex and limited indirect methods. The first actual multiplication of two dense elements was done in 1998, using most of the computing resources of a large maths department for 45 hours.\n",
+    "For many years this was clearly beyond any practical computation and computational study of this group has to use complex and limited indirect methods. The first actual multiplication of two dense elements was done in 1998, using most of the computing resources of a large maths department for 45 **hours**.\n",
     "\n",
     "Before OpenDreamKit this computation would still have taken days on a powerful workstation. We have contributed to the development of a massively improved C and assembler library and a GAP interface for it.\n",
     "\n",
-    "A Monster matrix multiplication now takes about 8 minutes on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to half the size. The full-sized multiplcation will take at most 8 times as long."
+    "A Monster matrix multiplication now takes about 8 *minutes* on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to half the size. The full-sized multiplcation will take at most 8 times as long."
    ]
   },
   {
