Editorial and add full-size Monster example

--- a/notebooks-master/Meataxe64 Demo.ipynb
+++ b/notebooks-master/Meataxe64 Demo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,44 +23,36 @@
    "source": [
     "## Monster Matrix Multiplication\n",
     "\n",
-    "The Classification of Finite Simple Groups, completed in the 1980s was one of the highlights of 20th Century mathematics. Part of it was the discovery of the 26 unique and remarkable sporadic simple groups, of which the largest is the Fischer-Griess Monster $\\mathbb{M}$ of order \n",
-    "$808017424794512875886459904961710757005754368000000000$.\n",
+    "The Classification of Finite Simple Groups was one of the highlights of 20th Century mathematics. \n",
+    "\n",
+    "It included the discovery of the sporadic simple <font color='blue'>Fischer-Griess Monster $\\mathbb{M}$</font> of order \n",
+    "<center><font color=\"blue\">$808017424794512875886459904961710757005754368000000000$</font></center>.\n",
     "\n",
     "$\\mathbb{M}$ has many intriguing links to other areas of mathematics and even to theoretical physics, so we'd like to compute in it. \n",
     "\n",
-    "**But**, the *most* tractable representation of this group is as $196882\\times 196882$ matrices of integers mod 2. Each matrix is 5GB.\n",
+    "<font color=\"red\">**But**</font>, the *most* tractable representation of this group is as <font color='blue'>$196882\\times 196882$</font> matrices of integers mod 2 -- Each matrix is 5GB.\n",
     "\n",
-    "For many years this was clearly beyond any practical computation and computational study of this group has to use complex and limited indirect methods. The first actual multiplication of two dense elements was done in 1998, using most of the computing resources of a large maths department for 45 **hours**.\n",
+    "For many years this was clearly beyond any practical computation. The first actual multiplication of two general elements was done in 1998, using most of the computing resources of a large maths department for <font color=\"red\">**45 hours**</font>.\n",
     "\n",
-    "Before OpenDreamKit this computation would still have taken days on a powerful workstation. We have contributed to the development of a massively improved C and assembler library and a GAP interface for it.\n",
+    "Before OpenDreamKit this computation would still have taken days. We have contributed to the development of a massively improved C and assembler library and a GAP interface for it.\n",
     "\n",
-    "A Monster matrix multiplication now takes about 8 *minutes* on a laptop, scaling to 2-3 minutes on a multicore server. That's a bit too much for a demo, so we'll drop to half the size. The full-sized multiplcation will take at most 8 times as long."
+    "A Monster matrix multiplication now takes about <font color=\"red\">**8 minutes**</font> on a laptop, scaling to 2-3 minutes on a multicore server. \n",
+    "\n",
+    "We start with matrices half that size for speed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "98441"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": [
        "< matrix 98441x98441 : <MTX64 GF(2)>>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {
       "text/plain": ""
      },
@@ -68,8 +60,8 @@
     }
    ],
    "source": [
-    "size := 196882/2;\n",
-    "m := MTX64_RandomMat(MTX64_FiniteField(2),size,size);"
+    "size := 196882/2;; f := MTX64_FiniteField(2);;\n",
+    "m := MTX64_RandomMat(f,size,size);"
    ]
   },
   {
@@ -81,19 +73,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wall time: 57.0s cpu time: 517s memory allocated: 1.12GB result returned\n"
+      "wall time: 53.7s cpu time: 505s memory allocated: 1.12GB result returned\n"
      ]
     }
    ],
    "source": [
     "ShowBench(ParMult,m,m);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll start the full sized computation and come back to it after the rest of Clement's talk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wall time: 469s cpu time: 4800s memory allocated: 4.51GB result returned\n"
+     ]
+    }
+   ],
+   "source": [
+    "m := MTX64_RandomMat(f,2*size,2*size);; ShowBench(ParMult, m, m);"
    ]
   },
   {
