Extend index and add screenshots

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -13,21 +13,38 @@
    "source": [
     "This repository contains a collection of examples of using GAP in [Jupyter](https://jupyter.org).\n",
     "\n",
-    "Notebooks requiring GAP 4.10.2 release:\n",
+    "## Notebooks requiring GAP 4.10.2 release:\n",
     "\n",
-    "* [An example with finitely presented groups](notebooks/HomophonicQuotientsOfFreeGroups.ipynb)\n",
-    "* [Semigroups package in GAP](notebooks/Semigroups.ipynb)\n",
-    "* [The number of numerical semigroups with given genus](notebooks/francy-monoids-mult-three.ipynb)\n",
-    "* [The state of GAP packages ecosystem](notebooks/GAP_Packages.ipynb)\n",
-    "* [Using GAP effectively: a lecture on some tips and pitfalls](notebooks/TipsAndPitfalls.ipynb)\n",
+    "* ### [Lattice of subgroups](notebooks/subgroup-lattice.ipynb)\n",
+    "![](images/Subgroup_lattice.png)\n",
     "\n",
+    "* ### [An example with finitely presented groups](notebooks/HomophonicQuotientsOfFreeGroups.ipynb)\n",
+    "![](images/Homophonic-quotients.png)\n",
     "\n",
-    "Notebooks requiring GAP master branch:\n",
-    "* [Meataxe64 package demo: high-performance linear algebra over finite fields](notebooks-master/Meataxe64%20Demo.ipynb)\n",
-    "* [GAP level reflection: syntax trees, a new feature coming in GAP 4.11](notebooks-master/Syntax%20Tree%20Demo.ipynb)\n",
+    "* ### [Semigroups package in GAP](notebooks/Semigroups.ipynb) \n",
+    "![](images/D-classes.png)\n",
     "\n",
-    "Notebooks requiring HPC-GAP:\n",
-    "* [HPC-GAP demo](notebooks-HPCGAP/HPCGAP.ipynb)"
+    "* ### [The number of numerical semigroups with given genus](notebooks/francy-monoids-mult-three.ipynb)\n",
+    "\n",
+    "![](images/numerical-semigroups.png)\n",
+    "* ### [The state of GAP packages ecosystem](notebooks/GAP_Packages.ipynb)\n",
+    "![](images/packages_map.png)\n",
+    "\n",
+    "* ### [Using GAP effectively: a lecture on some tips and pitfalls](notebooks/TipsAndPitfalls.ipynb)\n",
+    "![](images/Tips_and_pitfalls.png)\n",
+    "\n",
+    "## Notebooks requiring GAP master branch:\n",
+    "\n",
+    "* ### [Meataxe64 package demo: high-performance linear algebra over finite fields](notebooks-master/Meataxe64%20Demo.ipynb)\n",
+    "![](images/Meataxe64.png)\n",
+    "\n",
+    "* ### [GAP level reflection: syntax trees, a new feature coming in GAP 4.11](notebooks-master/Syntax%20Tree%20Demo.ipynb)\n",
+    "![](images/Reflection.png)\n",
+    "\n",
+    "## Notebooks requiring HPC-GAP:\n",
+    "\n",
+    "* ### [HPC-GAP demo](notebooks-HPCGAP/HPCGAP.ipynb)\n",
+    "![](images/hpcgap.png)"
    ]
   }
  ],
