--- a/notebooks/GAP_Packages.ipynb
+++ b/notebooks/GAP_Packages.ipynb
@@ -77,6 +77,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -291,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now build a bar chart using `Plot` from the JupyterViz package."
+    "We will now illustrate this with a bar chart, produced with the help of the JupyterViz package."
    ]
   },
   {
@@ -333,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GAP 4.11 will introduce new field in the package metadata to specify its license using SPDX identfiers. Some packages already include this information."
+    "GAP 4.11 will introduce new field in the package metadata to specify its license using SPDX identfiers. Some packages already include this information, and even more will contain it after the next GAP release."
    ]
   },
   {
@@ -374,28 +375,6 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[ [ \"Not specified\", 84 ], [ \"GPL-2.0-or-later\", 50 ], [ \"GPL-3.0-or-later\", 6 ], [ \"none\", 1 ], [ \"MIT\", 1 ], [ \"GPL-3.0\", 1 ], [ \"GPL-2.0 OR GPL-3.0\", 1 ], [ \"BSD-3-Clause\", 1 ] ]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {
-      "text/plain": ""
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "licinfo;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
       "application/javascript": [
        "( function ( element ) {\n",
        "if(!window.hasOwnProperty(\"runGAP\")){window.runGAP=function(code,callback){if(!Jupyter||!Jupyter.notebook||!Jupyter.notebook.kernel)return callback(null,\"JavaScript-based output must be re-evaluated when the notebook\"+\" is reloaded.  (Re-run the cell to clear this problem.)\");var errorMessages=[];var timeout=null;Jupyter.notebook.kernel.execute(code,{iopub:{output:function(message){if(\"data\"in message.content)return callback(message.content.data,null);if(!(\"text\"in message.content))return callback(null,message.content);errorMessages.push(message.content.text);if(timeout!==null)clearTimeout(timeout);timeout=setTimeout(function(){callback(null,errorMessages.join(\"\\n\"))},200)},clear_output:function(message){}},shell:{reply:function(message){}},input:function(message){}},{})}}if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){if(!window.hasOwnProperty(\"librariesLoadedFromGAP\")){window.librariesLoadedFromGAP={}}function myCallback(){window.createVisualization(element,{\"data\" : {\"data\" : [{\"values\" : [84,50,6,1,1,1,1,1],\"type\" : \"pie\",\"labels\" : [\"Not specified\",\"GPL-2.0-or-later\",\"GPL-3.0-or-later\",\"none\",\"MIT\",\"GPL-3.0\",\"GPL-2.0 OR GPL-3.0\",\"BSD-3-Clause\"]}],\"layout\" : {\"height\" : 400}},\"tool\" : \"plotly\"}\n",
@@ -413,7 +392,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {
       "application/javascript": ""
      },
@@ -428,12 +407,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we look at the status of providing standard test with a package."
+    "Next, we look at the number of packages providing a standard test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -751,12 +730,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next diagram shows the number of packages having a given number of authors "
+    "The next diagram shows the number of packages having a given number of authors. Most of the packages are developed collaboratively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +757,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {
       "application/javascript": ""
      },
@@ -793,12 +772,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We finish with the map displaying GAP package development activity per country."
+    "We finish with the map displaying GAP package development activity per country. For each package, each author gives a point to the country of their location, derived from the metadata from the latest version of their package. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -850,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +851,7 @@
        "} )( element.get( 0 ) )"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {
       "application/javascript": ""
      },
