Credit to Manuel Martins for his notebooks from francy package

--- a/notebooks/francy-monoids-mult-three.ipynb
+++ b/notebooks/francy-monoids-mult-three.ipynb
@@ -12,13 +12,17 @@
     "\n",
     "The number of numerical semigroups with a given genus seems to grow as the genus grows. It was [conjectured](https://link.springer.com/article/10.1007/s00233-007-9014-8) (and later [solved](https://link.springer.com/article/10.1007/s00233-012-9456-5)) that this sequence grows as the Fibonacci series.\n",
     "\n",
-    "[GAP](https://gap-system.org) offers a package for working with numerical semigroups ([NumericalSgps](https://gap-packages.github.io/numericalsgps)), and a package for displaying data in a jupyter notebook is under development: [francy](https://github.com/mcmartins/francy). [FranyMonoids](https://http://gap-packages.github.io/FrancyMonoids) takes profit of them both. In order to use it in GAP we load it with `LoadPackage`."
+    "[GAP](https://gap-system.org) offers a package for working with numerical semigroups ([NumericalSgps](https://gap-packages.github.io/numericalsgps)), and a package for displaying data in a jupyter notebook is under development: [francy](https://github.com/mcmartins/francy). [FranyMonoids](https://http://gap-packages.github.io/FrancyMonoids) takes profit of them both. In order to use it in GAP we load it with `LoadPackage`.\n",
+    "\n",
+    "This notebook has been developed by Manuel Martins for the francy package, and has been copied from https://github.com/gap-packages/francy/tree/master/notebooks. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "LoadPackage(\"packagemanager\");"
@@ -27,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "InstallPackage(\"https://github.com/gap-packages/FrancyMonoids.git\");"
@@ -37,6 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -54,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "List([1..15], g->Length(NumericalSemigroupsWithGenus(g)));"
@@ -81,6 +90,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -119,6 +129,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -129,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s:=NumericalSemigroup(3,4,5);"
@@ -139,6 +152,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -157,6 +171,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -175,6 +190,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
