--- a/notebooks/subgroup-lattice.ipynb
+++ b/notebooks/subgroup-lattice.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "This is a draft version of the Subgroup Lattice module, inspired by the XGAP version, and implements few features. At the moment is possible to explore the lattice by right clicking a node and explore its properties, and by generating all subgroups lattice.\n",
-    "\n"
+    "\n",
+    "This notebook has been developed by Manuel Martins for the francy package, and has been copied from https://github.com/gap-packages/francy/tree/master/notebooks. "
    ]
   },
   {
